tests/import_invalid_path_dot.sl
// Verifies import invalid path dot.
import "."

fn main() {}
